--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/imagenes/Logo.png" alt="logo de alura">
+        <img class="logo" src="imagenes/Logo.png" alt="logo de alura">
     </header>
 
     <main>
         <section class="encriptador">
             <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div class="aviso">
-                <img src="./imagenes/aviso.svg" alt="Imagen Aviso" class="imagen-aviso">
+                <img src="imagenes/aviso.svg" alt="Imagen Aviso" class="imagen-aviso">
                 <p class="informacion">Solo letras minúsculas y sin acentos </p> 
             </div>
             <div class="botones">
@@ -31,7 +31,7 @@
         <section class="mensaje">            
             <textarea class="resultado" cols="20" rows="10"></textarea>
             <div class="mensaje-contenedor">
-                <img src="./imagenes/muneco.png" alt="Imagen munñeco" class="img-muneco">
+                <img src="imagenes/muneco.png" alt="Imagen munñeco" class="img-muneco">
                 <p class="texto-uno">Ningun mensaje fue encontrado</p>
                 <p class="texto-dos">Ingrese el texto que deseas encriptar o desencriptar.</p>                
             </div>
