cambio estilo de botones

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <textarea class="resultado" cols="20" rows="10"></textarea>
             <div class="mensaje-contenedor">
                 <img src="imagenes/muneco.png" alt="Imagen munñeco" class="img-muneco">
-                <p class="texto-uno">Ningun mensaje fue encontrado</p>
+                <p class="texto-uno">Ningún mensaje fue encontrado</p>
                 <p class="texto-dos">Ingrese el texto que deseas encriptar o desencriptar.</p>                
             </div>
             
